--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,16 @@
   </head>
   <body class="container">
     <button id="complimentButton">Get a compliment</button>
-    <button id="fortuneButton">get a fortune</button>
+    <button id="fortuneButton">Get a fortune</button>
+    <form id="custom">
+      <input type="text" placeholder="custome fortune">
+      <button>Create custom fortune</button>
+    </form>
+    <button id="deleteBtn">Delete custom fortune</button>
+    <form id="replace">
+      <input type="text" placeholder="replacement fortune">
+      <button>replace custom fortune</button>
+    </form>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
