--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,12 @@
     <button id="complimentButton">Get a compliment</button>
     <button id="fortuneButton">Get a fortune</button>
     <form id="custom">
-      <input type="text" placeholder="custome fortune">
+      <input type="text" placeholder="custome fortune" id="customInput">
       <button>Create custom fortune</button>
     </form>
     <button id="deleteBtn">Delete custom fortune</button>
     <form id="replace">
-      <input type="text" placeholder="replacement fortune">
+      <input type="text" placeholder="replacement fortune" id="replacementInput">
       <button>replace custom fortune</button>
     </form>
 
